added updated files to fix box design of tweets

--- a/index.css
+++ b/index.css
@@ -48,7 +48,7 @@ header {
 }
 
 .box-container {
-  width: 90vw; /* Responsive width */
+  width: 90vw; /* responsive width */
   max-width: 500px; /* caps width on larger screens */
   background-color: white;
   border: 1px solid #535353;
